Remove sleep from tests